--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -64,6 +64,7 @@
               <li><a class="dropdown-item text-white fw-semibold" href="{% url 'problem_list' %}">📘 Problems</a></li>
               <li><a class="dropdown-item text-white fw-semibold" href="{% url 'online_compiler' %}">💻 Compiler</a></li>
               <li><a class="dropdown-item text-white fw-semibold" href="{% url 'ai_suggestions' %}">🤖 AI Assistant</a></li>
+              <li><a class="dropdown-item text-white fw-semibold" href="{% url 'leaderboard' %}">🏆 Leaderboard</a></li>
             </ul>
           </li>
         
