--- a/problems/templates/problems/problem_detail.html
+++ b/problems/templates/problems/problem_detail.html
@@ -88,8 +88,8 @@
       <!-- Submissions -->
       <div class="tab-pane fade" id="subs-pane" role="tabpanel">
         {% if submissions %}
-          <div class="d-flex justify-content-center">
-            <div class="table-responsive" style="max-width: 95%;">
+          <div class="table-responsive" style="margin: 0 auto; width: 90%;">
+
               <table class="table table-dark table-hover table-sm mb-0 text-center">
                 <thead class="table-light text-dark">
                   <tr>
@@ -121,7 +121,7 @@
                   {% endfor %}
                 </tbody>
               </table>
-            </div>
+
           </div>
         {% else %}
           <p class="text-muted">No submissions yet.</p>
